<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Lateral" Id="{f6826945-959b-4729-a0a7-155f8daac85b}">
    <Declaration><![CDATA[TYPE Lateral :
STRUCT
	
	power_axis	: BOOL;
	contactor_axis : BOOL;	
	mcAxis 					: FB_MotionAxis_MC;
	st_mcAxis 				: ST_MotionAxis_MC;
	AxisRef					: AXIS_REF;
	valve_lift	:Valve;
	valve_clamp	:	ARRAY[0..1]OF Valve;
	limit_sensor : ARRAY[0..2]OF BOOL;
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>